--- a/im.html
+++ b/im.html
@@ -69,6 +69,7 @@ html,body{
 .card{
   flex:0 0 auto;
   width:var(--card-w);
+  aspect-ratio: 3 / 4.2;
   position:relative;
   scroll-snap-align:center;
   margin-right:calc(var(--card-w) * -1 * var(--overlap-factor));
