--- a/instructionc.html
+++ b/instructionc.html
@@ -8,11 +8,9 @@
 <style>
   body {
     margin: 0;
+    padding: 0;
     background: #fff;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
+    height: 100%;
   }
 
   .carousel {
