--- a/instructionc.html
+++ b/instructionc.html
@@ -16,13 +16,11 @@
   .carousel {
     position: relative;
     width: 100%;
-    max-width: 400px;
-    height: 711px;
-    perspective: 1200px;
-    border-radius: 12px;
+    height: 100%;
+    max-width: 100%;
+    border-radius: 0;
     background: #fff;
-    box-shadow: 0 0px 0px rgba(0,0,0,0.1);
-  }
+      }
 
   .cube {
     width: 100%;
