--- a/instructionc.html
+++ b/instructionc.html
@@ -17,11 +17,14 @@
     position: relative;
     width: 100%;
     height: 100%;
-    max-width: 100%;
+    perspective: 1200px;
     border-radius: 0;
     background: #fff;
       }
 
+  body { background: red; }
+.carousel { background: blue; }
+  
   .cube {
     width: 100%;
     height: 100%;
