--- a/instructionc.html
+++ b/instructionc.html
@@ -8,19 +8,23 @@
 <style>
   body {
     margin: 0;
-    padding: 0;
     background: #fff;
-    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
   }
 
   .carousel {
     position: relative;
     width: 100%;
-    height: 100%;
+    max-width: 400px;
+    height: 711px;
     perspective: 1200px;
-    border-radius: 0;
+    border-radius: 12px;
     background: #fff;
-      }
+    box-shadow: 0 0px 0px rgba(0,0,0,0.1);
+  }
 
   body { background: red; }
 .carousel { background: blue; }
